- The installation work-flow and ant targets have changed.
- 'Certificate Request History' is now disabled by default for new CAs.
- PKCS11 crypto tokens can now be managed by slot label (in addition to slot number and index) 

* Changes to the CLI
- The 'cryptotoken create' command has been been given an additional argument for PKCS11 crypto tokens to define the slot labeling type.

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 5.1.0
-----------
Internal work that never made a release.

EJBCA 5.0.10
-----------
This is a maintenance release with new features, improvements and bug fixes. In all 20 issues have been fixed.

* Noteworthy changes:
- Added lots of CLI improvements to create subCA signed by external CAs, edit CAs and profiles, and add and edit services.
- It is now possible to create CAs, using the CLI, with explicit ECC key encoding in CA certificate. Useful for ePassport installations.
- When creating link certificates they are now issued using the same certificate profile as the CA is using.  
- Improved support for Elliptic Curve Cryptography (ECC) using the CMP protocol. You can now use CMP in a Suite B compliant way.
- The LDAP publisher now supports STARTTLS extension, in addition to pure TLS connections.
- The batch enrollment GUI can now use JKS keystores, in addition to PKCS#12 keystores.
- Healthcheck messages are now logged in debug log, for easier troubleshooting.

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 5.0.9
-----------
This is a maintenance release with improvements and bug fixes. In all 14 issues have been fixed.
This release contains a minor security fix.

* Noteworthy changes:
- New ClientToolbox sub-command: 'batchgenerate'
- CMP vendor certificate authorization
- Cache for publishers
- EJBCA compiles and runs on JDK7
- Fixed upgrade failure
- Fixed revocation not performing as expected in all circumstances 